--- a/styles.css
+++ b/styles.css
@@ -50,11 +50,14 @@ main {
     margin-left: auto;
     margin-right: auto;
     margin-top: 2%;
-    padding: 2%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
     text-align: center;
-    
+    padding-right: 15%;
+    padding-left: 15%;
+    padding-top: 2%;
+    padding-bottom: 5%;
 }
+
 
 h1 {
     font-size: 3em;
@@ -74,6 +77,21 @@ p {
     font-size: 1.2em;
 }
 
+
+.video-wrapper {
+    position: relative;
+    height: 0;
+    padding-bottom: 56.25%;
+   
+}
+
+.video-wrapper iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%; 
+}
 
 
 /*Responsive styles*/
